<resources>
    <!-- main menu -->
    <string name="app_name">Dice Game</string>
    <string name="diceBase">0</string>
    <string name="diceLabel">Result of Dice Roll</string>
    <string name="rollTotalLabel">Score This Roll: </string>
    <string name="totalLabel">Score: </string>
    <string name="buttonLabel">Swipe Up to Roll!!</string>
    <!-- multiplier checkboxes -->
    <string name="doubleLabel">Enable Double</string>
    <string name="tripleLabel">Enable Triple</string>

    <string name="nameLabel">Name:</string>
    <string name="nameDefault">Player</string>

    <!-- multiplier strings -->
    <string name="noMult">No Score Enhancer</string>
    <string name="doubleMult">Double: +</string>
    <string name="tripleMult">Triple: +</string>

    <string name="doubleSelect">Doubles Enabled</string>
    <string name="tripleSelect">Triples Enabled</string>
    <string name="bothSelect">Doubles and Triples Enabled</string>

    <!-- settings dialog -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- menu -->
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- about menu -->
    <string name="aboutMsg">Author: Mitchell Bennett \nVersion: m11\nSounds: ZapSplat.com</string>
    <string name="aboutTitle">About</string>

    <!-- scoreboard -->
    <string name="scoreBoardButton">ScoreBoard</string>
    <string name="totalDiceRolls"> Total Dice Rolls</string>
    <string name="thankYou">Thank you for playing, </string>
    <string name="scoreboard">Scoreboard</string>
    <string name="returnButton">Return to Game</string>

    <string name="doubleCount">Doubles:</string>
    <string name="tripleCount">- Triples:</string>
</resources>