<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/buttonLabel"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollScoreText" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/totalLabel"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollButton" />

    <ImageView
        android:id="@+id/dice2Img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toStartOf="@+id/dice3Img"
        app:layout_constraintStart_toEndOf="@+id/dice1Img"
        app:layout_constraintTop_toBottomOf="@+id/nameField"
        app:srcCompat="@drawable/die_2" />

    <ImageView
        android:id="@+id/dice3Img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dice2Img"
        app:layout_constraintTop_toTopOf="@+id/dice2Img"
        app:srcCompat="@drawable/die_1" />

    <ImageView
        android:id="@+id/dice1Img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toStartOf="@+id/dice2Img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dice2Img"
        app:srcCompat="@drawable/die_6" />


    <TextView
        android:id="@+id/bonusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/noMult"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enhancersSelected" />

    <TextView
        android:id="@+id/rollScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rollTotalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bonusText"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/enhancersSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="No Enhancers Selected"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice2Img" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:labelFor="@+id/nameField"
        android:text="@string/nameLabel"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/nameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/nameDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <Button
        android:id="@+id/scoreboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/scoreBoardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalText" />

</androidx.constraintlayout.widget.ConstraintLayout>